--- a/reactExam-02/src/index.css
+++ b/reactExam-02/src/index.css
@@ -22,3 +22,40 @@ body{
   overflow-y: auto;
   overflow-x: hidden;
 }
+
+h3{
+  font-size: 1.5rem;
+  text-transform: capitalize;
+  color: #000;
+}
+.card{
+  border: 1px solid red;
+  border-radius: 10px;
+margin: 10px;
+
+  padding: 25px;
+}
+.container{
+  max-width: 100%;
+    margin: 2% auto 1%;
+  display: grid;
+  align-items: center;
+  grid-template-columns: repeat(2, 1fr);
+  border: 1px solid rgb(107, 29, 29);
+  border-radius: 5px;
+  padding-left: 20px;
+}
+p{
+  font-weight: 500;
+}
+button{
+  border-radius: 5px;
+  color:red;
+  background: #fafa;
+  padding: 8px 35px;
+  text-transform: capitalize;
+  cursor: pointer;
+}
+img{
+  width: 100%;
+}
