--- a/react-assignment-01/src/index.css
+++ b/react-assignment-01/src/index.css
@@ -18,7 +18,7 @@ a{
 }
 body{
   max-width: 100%;
-  margin: 0 10%;
+  margin: 0 5%;
   overflow-y: auto;
   overflow-x: hidden;
 }
@@ -56,6 +56,11 @@ h3{
 .card{
   padding: 10px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+  height: 100%;
 }
 p{
   font-weight: 500;
@@ -65,38 +70,53 @@ pre{
 }
 button{
   border-radius: 5px;
-  color:red;
-  background: #fafa;
-  padding: 8px 35px;
+  color:rgb(53, 5, 5);
+  background: rgba(223, 215, 223, 0.667);
+  padding: 10px 35px;
   text-transform: capitalize;
   cursor: pointer;
+  border: 0;
+  font-size: 1.2rem;
+  outline: 0;
+  width: fit-content;
+  margin-top: 10px;
 }
 pre{
   text-transform: lowercase
 }
 img{
+  max-width: 100%;
   width: 100%;
+  border-radius: 10px;
+  height: 400px;
+  object-fit: cover;
 }
 span{
   color: blue;
   background: #f0f0f0f0;
   padding: 5px;
+  width: fit-content;
 }
 .nestedmap{
   padding: 20px;
+  margin-top: 5%;
 
 }
 h3, p, li{
   text-transform: capitalize;
+  font-weight: 600;
 }
 .article{
   list-style: circle;
   padding: 10px;
 }
-.artNest{
-  font-weight: 500;
-  color: rgb(49, 6, 6);
+.product__details{
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
-.cardColor{
-  color: red;
+.product__desc{
+  margin:10px auto ;
 }
+
