--- a/react-06/src/index.css
+++ b/react-06/src/index.css
@@ -1,7 +1,7 @@
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  background: transparent;
-  color: #000;
+  background: #000;
+  color: #fff;
   
 
 }
@@ -25,20 +25,22 @@ body{
 h1{
   text-align: center;
   text-transform: uppercase;
-  color: #fff;
-  position: fixed;
+  
+ 
   width: 100%;
   height: auto;
-  top: 0;
-  left: 50%;
-  margin:  auto;
-  transform: translateX(-50%);
+  color: #000;
+  background: #fff;
+ 
+  margin: 0 auto;
+  margin-bottom: 5%;
+ 
 }
 
 h3{
   font-size: 1.5rem;
   text-transform: capitalize;
-  color: #000;
+  color: #fff;
 }
 .card{
   border: 1px solid red;
@@ -59,6 +61,10 @@ margin: 10px;
 }
 p{
   font-weight: 500;
+  
+}
+.ex{
+  color: red;
 }
 button{
   border-radius: 5px;
