--- a/react-07/react-07/src/index.css
+++ b/react-07/react-07/src/index.css
@@ -29,8 +29,8 @@ h1{
  
   width: 100%;
   height: auto;
-  color: #000;
-  background: #fff;
+  color: #fff;
+  
  
   margin: 0 auto;
   margin-bottom: 5%;
@@ -40,7 +40,7 @@ h1{
 h3{
   font-size: 1.5rem;
   text-transform: capitalize;
-  color: #fff;
+  color: rgb(14, 231, 14);
 }
 .card{
   border: 1px solid red;
@@ -70,14 +70,16 @@ button{
   border-radius: 5px;
   background: #fff;
   color: #000;
-  width: 40px;
+  width: fit-content;
+  padding: 0 10px;
   text-transform: capitalize;
   cursor: pointer;
   font-size: 2rem;
 }
 pre{
   text-transform: lowercase;
-  color:red;
+  color:#888282;
+  font-size: 1rem;
 }
 img{
   width: 100%;
@@ -90,4 +92,10 @@ img{
   color: #fff;
   margin: 10px;
   
+}
+.state{
+  border: 1px solid #fff;
+  border-radius: 5px;
+  padding: 5px;
+  margin-bottom: 10px;
 }
