--- a/react-09/react-handler/src/index.css
+++ b/react-09/react-handler/src/index.css
@@ -30,6 +30,12 @@ h1 {
 
   margin: 0 auto;
 }
+.handlerCard{
+  padding: 5px;
+  border: 1px solid #ffffff3a;
+  border-radius: 10px;
+  margin: 0 0 20px 0 ;
+}
 .titleCard {
   display: flex;
   justify-content: center;
@@ -38,6 +44,11 @@ h1 {
   margin: 2% auto 3%;
   background: #423838;
   padding: 10px;
+  transition: 0.5s ease;
+}
+.titleCard:hover{
+  background: #706060;
+
 }
 pre {
   font-size: 1rem;
@@ -61,6 +72,8 @@ input {
   color: purple;
   padding: 10px;
   margin: 5px;
+  border: 0;
+  outline: 0;
  
 }
 .container{
@@ -107,4 +120,23 @@ button{
 }
 h3{
   color: yellow;
+}
+#dragBox{
+  width: 200px;
+  height: 100px;
+  background: red;
+  margin: 10px;
+  cursor: grab;
+  color: yellow;
+  text-align: center;
+  font-size: 1.5rem;
+  border-radius: 10px;
+  border: 1px solid #fff;
+}
+.dragOverBox{
+  width: 300px;
+  height: 130px;
+  background: #423838;
+  margin: 15px;
+  border: 1px dashed #fff;
 }
