--- a/react-09/react-handler/src/index.css
+++ b/react-09/react-handler/src/index.css
@@ -100,6 +100,7 @@ form{
 button{
   padding: 5px 10px;
   width: fit-content;
+  margin: 4%;
 }
 .sub-res{
   display: flex;
@@ -139,4 +140,45 @@ h3{
   background: #423838;
   margin: 15px;
   border: 1px dashed #fff;
+}
+.formCard{
+  background: #302e2e;
+  padding: 25px;
+ 
+}
+form{
+  padding: 10px;
+  background: #706060;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+form .input-group{
+  margin: 5px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.input-group label{
+  padding-left: 10px;
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+.input-group input{
+  border-radius: 5px;
+  color: #000;
+  width: 50%;
+}
+.formBtn{
+  background: rgb(33, 148, 58);
+  border: 0;
+  color: #fff;
+  font-weight: 500;
+  cursor: pointer;
+   font-size: 1rem;
+  outline: 0;
+  border-radius: 10px;
+  padding:10px 25px;
+  margin: 10px;
 }
