--- a/reactExam-03/Form/src/index.css
+++ b/reactExam-03/Form/src/index.css
@@ -39,7 +39,7 @@ h1{
   width: 100%;
   border-radius: 10px;
   padding: 30px;
-  margin-top: 15%;
+  margin-top: 10%;
 }
 form{
   max-width: 100%;
@@ -53,6 +53,12 @@ form{
   display: flex;
   flex-direction: column;
   gap: 5px;
+  padding: 5px;
+  border-radius: 5px;
+}
+label{
+  display: flex;
+  gap: 10px;
 }
 .input-group input{
   padding: 10px;
@@ -70,4 +76,28 @@ button{
   outline: 0;
 
 }
-
+.btn-group{
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 10px;
+  
+}
+select{
+  padding: 10px 40px 10px 0;
+  border-radius: 5px;
+  width: fit-content;
+}
+textarea{
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  padding: 15px;
+  border-radius: 5px;
+  
+}
+pre{
+  font-size: 1.2rem;
+  color: aqua;
+  padding:0 10px;
+  background: #0d0e0d;
+}
